[package]
name = "pasta"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.37.0"
features = [
	"Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading",
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_System_DataExchange",
	"Win32_System_Memory",
	"Win32_System_SystemServices",
]
